src/objects/ints__TUCR_TransAlert__c.object
<CustomObject>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TransUnion_Credit_Report__c</fullName>
        <label>TransUnion Credit Report</label>
        <referenceTo>ints__TransUnion_Credit_Report__c</referenceTo>
        <relationshipLabel>TUCR TransAlerts</relationshipLabel>
        <relationshipName>TUCR_TransAlerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TUCR TransAlert</label>
    <nameField>
        <displayFormat>TUCR_TA-{000000000}</displayFormat>
        <label>TUCR TransAlert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TUCR TransAlerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>